--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     &nbsp
     <a href="https://github.com/adricanovas/" style="color: white;"><i class="fab fa-github" style="font-size: 2em;"></i></a>
     &nbsp
+    <a href="https://github.com/adricanovas/TRSBot" style="color: white;"><i class="fa-solid fa-message-bot" style="font-size: 2em;"></i></a>
+    &nbsp
   </div>
 </div>
 
