--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="shortcut icon" type="image/png" href="assets/favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous" type="text/css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css" crossorigin="anonymous" type="text/css">
   <script type="text/javascript" src="js/jquery.particleground.js"></script>
   <script type="text/javascript" src="js/demo.js"></script>
 </head>
@@ -22,7 +22,7 @@
     &nbsp
     <a href="https://github.com/adricanovas/" style="color: white;"><i class="fab fa-github" style="font-size: 2em;"></i></a>
     &nbsp
-    <a href="https://github.com/adricanovas/TRSBot" style="color: white;"><i class="fa-solid fa-message-bot" style="font-size: 2em;"></i></a>
+    <a href="https://github.com/adricanovas/TRSBot" style="color: white;"><i class="fa-brands fa-stack-exchange" style="font-size: 2em;"></i></a>
     &nbsp
   </div>
 </div>
