Adding new projects

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     &nbsp
     <a href="https://github.com/adricanovas/TRSBot" style="color: white;"><i class="fa-brands fa-stack-exchange" style="font-size: 2em;"></i></a>
     &nbsp
+    <a href="https://github.com/adricanovas/TemperatureDataImputation" style="color: white;"><i class="fa-brands fa-stack-exchange" style="font-size: 2em;"></i></a>
+    &nbsp
+    <a href="https://github.com/adricanovas/VIA" style="color: white;"><i class="fa-brands fa-stack-exchange" style="font-size: 2em;"></i></a>
   </div>
 </div>
 
